--- a/index.html
+++ b/index.html
@@ -1,64 +1,90 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
-		<title></title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<meta name="mobile-web-app-capable" content="yes" />		
-		<style type="text/css" title="Default">
-			body, div, h1, h2, h3, span, p {
-				font-family: Verdana,Arial,Helvetica,sans-serif;
-			}
-			/* fullscreen */
-			html {
-				height:100%;
-			}
-			body {
-				height:100%;
-				margin: 0px;
-				overflow:hidden; /* disable scrollbars */
-				font-size: 10pt;
-				-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* remove highlight on tab for iOS/Android */
-			}
-			/* fix for scroll bars on webkit & >=Mac OS X Lion */ 
-			::-webkit-scrollbar {
-				background-color: rgba(0,0,0,0.5);
-				width: 0.75em;
-			}
-			::-webkit-scrollbar-thumb {
-    			background-color:  rgba(255,255,255,0.5);
-			}
-		</style>	
-	</head>
-	<body>
-<!-- - - - - - - 8<- - - - - - cut here - - - - - 8<- - - - - - - -->
-		<script type="text/javascript" src="pano2vr_player.js">
-		</script>
-		<script type="text/javascript" src="skin.js">
-		</script>
-		<div id="container" style="width:100%;height:100%;overflow:hidden;">
-		<br>Loading...<br><br>
-		This content requires HTML5 with CSS3 3D Transforms or WebGL.
-		</div>
-		<script type="text/javascript">
-	
-			// create the panorama player with the container
-			pano=new pano2vrPlayer("container");
-		// add the skin object
-		skin=new pano2vrSkin(pano);
-		// load the configuration
-		window.addEventListener("load", function() {
-			pano.readConfigUrlAsync("pano.xml");
-		});
-		</script>
-		<noscript>
-			<p><b>Please enable Javascript!</b></p>
-		</noscript>
-<!-- - - - - - - 8<- - - - - - cut here - - - - - 8<- - - - - - - --> 
-		<!-- Hack needed to hide the url bar on iOS 9, iPhone 5s --> 
-		<div style="width:1px;height:1px;"></div>
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: linear-gradient(135deg, #4e54c8, #8f94fb);
+            color: white;
+            text-align: center;
+        }
+        .container {
+            max-width: 500px;
+        }
+        h1 {
+            font-size: 3rem;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 1.2rem;
+            margin-bottom: 30px;
+        }
+        .button {
+            display: inline-block;
+            padding: 15px 30px;
+            font-size: 1rem;
+            color: #4e54c8;
+            background: white;
+            border: none;
+            border-radius: 25px;
+            text-decoration: none;
+            font-weight: bold;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s, transform 0.2s;
+            cursor: pointer;
+        }
+        .button:hover {
+            background: #e4e4e4;
+            transform: scale(1.05);
+        }
+        #main-content {
+            display: none;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+</head>
+<body>
+    <div id="welcome-screen" class="container">
+        <h1>Welcome to My Project</h1>
+        <p>Click the button below to view the project.</p>
+        <button class="button" onclick="startProject()">Go to Project</button>
+    </div>
+
+    <div id="main-content">
+        <script type="text/javascript" src="pano2vr_player.js"></script>
+        <script type="text/javascript" src="skin.js"></script>
+        <div id="container" style="width:100%;height:100%;overflow:hidden;">
+            <br>Loading...<br><br>
+            This content requires HTML5 with CSS3 3D Transforms or WebGL.
+        </div>
+        <script type="text/javascript">
+            // create the panorama player with the container
+            let pano;
+            let skin;
+
+            function initializePanorama() {
+                pano = new pano2vrPlayer("container");
+                skin = new pano2vrSkin(pano);
+                pano.readConfigUrlAsync("pano.xml");
+            }
+        </script>
+    </div>
+
+    <script>
+        function startProject() {
+            document.getElementById('welcome-screen').style.display = 'none';
+            document.getElementById('main-content').style.display = 'block';
+            initializePanorama();
+        }
+    </script>
+</body>
 </html>
