--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="logo">T4</div>
+    <div class="logo">T4V2</div>
 
     <div class="filter-buttons">
         <button data-filter="all" class="active" data-tooltip="Показать все плитки">Все</button>
