--- a/index.html
+++ b/index.html
@@ -4,7 +4,166 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Плиточная раскладка с фильтрацией</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-color: #0e0e0e;
+            margin: 0;
+            font-family: 'Arial', sans-serif;
+            color: #ffffff;
+        }
+
+        .tile-description, .tile-title {
+            position: absolute;
+            left: 0;
+            right: 0;
+            color: #fff;
+            padding: 10px;
+            opacity: 0;
+            transition: opacity 0.3s;
+            text-align: center;
+            font-size: 14px;
+        }
+
+        .tile-description {
+            top: 0;
+            bottom: 0;
+            background: rgba(0,0,0,0.7);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .tile:hover .tile-description, .tile:hover .tile-title {
+            opacity: 1;
+        }
+
+        .logo {
+            text-align: center;
+            font-size: 48px;
+            font-weight: bold;
+            margin: 30px 0 20px 0;
+            color: #ff6f61;
+            text-transform: uppercase;
+            letter-spacing: 5px;
+        }
+
+        .filter-buttons {
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        .filter-buttons button {
+            background-color: #444;
+            color: #fff;
+            border: none;
+            padding: 10px 15px;
+            margin: 5px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+            font-size: 16px;
+            position: relative;
+        }
+
+        .filter-buttons button:hover, .filter-buttons .active {
+            background-color: #ff6f61;
+        }
+
+        /* Стили для пользовательских подсказок */
+        .tooltip {
+            position: absolute;
+            background-color: #333;
+            color: #fff;
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 14px;
+            white-space: nowrap;
+            z-index: 1000;
+            opacity: 0;
+            transition: opacity 0.3s;
+            pointer-events: none;
+        }
+
+        .tile-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, 100px);
+            grid-auto-rows: 100px;
+            gap: 5px;
+            justify-content: center;
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #0e0e0e;
+            grid-auto-flow: dense;
+        }
+
+        .tile {
+            position: relative;
+            overflow: hidden;
+            border-radius: 10px;
+            transition: transform 0.3s, box-shadow 0.3s, opacity 0.3s;
+            cursor: pointer;
+        }
+
+        .tile img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .tile:hover {
+            transform: scale(1.05);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+        }
+
+        .large-square {
+            grid-column: span 2;
+            grid-row: span 2;
+        }
+
+        .small-square {
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+
+        .horizontal-rectangle {
+            grid-column: span 2;
+            grid-row: span 1;
+        }
+
+        .vertical-rectangle {
+            grid-column: span 1;
+            grid-row: span 2;
+        }
+
+        .tile.hidden {
+            display: none;
+            opacity: 0;
+            transform: scale(0.8);
+            pointer-events: none;
+            transition: opacity 0.3s, transform 0.3s;
+        }
+
+        @media (max-width: 600px) {
+            .tile-container {
+                grid-template-columns: repeat(auto-fill, 50px);
+                grid-auto-rows: 50px;
+            }
+
+            .large-square, .horizontal-rectangle, .vertical-rectangle {
+                grid-column: span 2;
+                grid-row: span 2;
+            }
+
+            .tile {
+                border-radius: 5px;
+            }
+
+            .tile-title {
+                font-size: 12px;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="logo">T4</div>
@@ -20,15 +179,81 @@
         <!-- Плитки будут сгенерированы JavaScript-ом -->
     </div>
 
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <div class="modal-body" id="modal-body">
-                <!-- Контент будет загружен динамически -->
-            </div>
-        </div>
-    </div>
+    <script>
+        const tileData = [
+            { category: "category1", size: "large-square", title: "Плитка 1", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg", description: "Описание плитки 1 тут может быть что угодно и для чего угодно не знаю что еще добавить как это добавить" },
+            { category: "category2", size: "small-square", title: "Плитка 2", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg", description: "Описание плитки 2" },
+            { category: "category3", size: "horizontal-rectangle", title: "Плитка 3", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
+            { category: "category1", size: "vertical-rectangle", title: "Плитка 4", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
+            { category: "category2", size: "small-square", title: "Плитка 5", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
+            { category: "category3", size: "large-square", title: "Плитка 6", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
+            { category: "category2", size: "horizontal-rectangle", title: "Плитка 7", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
+            { category: "category3", size: "vertical-rectangle", title: "Плитка 8", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
+        ];
 
-    <script src="script.js"></script>
+        const tileContainer = document.querySelector('.tile-container');
+
+        tileData.forEach(tile => {
+            const tileElement = document.createElement('div');
+            tileElement.classList.add('tile', tile.size);
+            tileElement.setAttribute('data-category', tile.category);
+
+            const imgElement = document.createElement('img');
+            imgElement.src = tile.img;
+            imgElement.alt = tile.title;
+
+            const titleElement = document.createElement('div');
+            titleElement.classList.add('tile-title');
+            titleElement.textContent = tile.title;
+
+            tileElement.appendChild(imgElement);
+            tileElement.appendChild(titleElement);
+
+            if (tile.description) {
+                const descriptionElement = document.createElement('div');
+                descriptionElement.classList.add('tile-description');
+                descriptionElement.textContent = tile.description;
+                tileElement.appendChild(descriptionElement);
+            }
+
+            tileContainer.appendChild(tileElement);
+        });
+
+        const filterButtons = document.querySelectorAll('.filter-buttons button');
+        const tiles = document.querySelectorAll('.tile');
+
+        filterButtons.forEach(button => {
+            button.addEventListener('click', event => {
+                const filter = button.getAttribute('data-filter');
+                filterTiles(filter);
+                filterButtons.forEach(btn => btn.classList.remove('active'));
+                event.target.classList.add('active');
+            });
+
+            // Создание пользовательской подсказки
+            const tooltip = document.createElement('div');
+            tooltip.className = 'tooltip';
+            tooltip.textContent = button.getAttribute('data-tooltip');
+            button.appendChild(tooltip);
+
+            button.addEventListener('mouseenter', () => {
+                tooltip.style.opacity = '1';
+            });
+
+            button.addEventListener('mouseleave', () => {
+                tooltip.style.opacity = '0';
+            });
+        });
+
+        function filterTiles(filter) {
+            tiles.forEach(tile => {
+                if (filter === 'all' || tile.getAttribute('data-category') === filter) {
+                    tile.classList.remove('hidden');
+                } else {
+                    tile.classList.add('hidden');
+                }
+            });
+        }
+    </script>
 </body>
 </html>
