--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
     <div class="logo">T4</div>
 
     <div class="filter-buttons">
-        <button data-filter="all" class="active" data-tooltip="Показать все плитки">Все</button>
-        <button data-filter="category1" data-tooltip="Показать только эскизы">ЭСКИЗЫ</button>
-        <button data-filter="category2" data-tooltip="Показать плитки 2007 года">2007 ГОД</button>
-        <button data-filter="category3" data-tooltip="Показать плитки из категории 3">Категория 3</button>
+        <button data-filter="all" class="active" data-tooltip="Показать все эскизы">Все</button>
+        <button data-filter="category1" data-tooltip="2007">ЭСКИЗЫ</button>
+        <button data-filter="category2" data-tooltip="2007">2007 ГОД</button>
+        <button data-filter="category3" data-tooltip="2010">Категория 3</button>
     </div>
 
     <div class="tile-container">
@@ -181,7 +181,7 @@
 
     <script>
         const tileData = [
-            { category: "category1", size: "large-square", title: "Плитка 1", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg", description: "Описание плитки 1 тут может быть что угодно и для чего угодно не знаю что еще добавить как это добавить" },
+            { category: "category1", size: "large-square", title: "Плитка 1", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg", description: "Описание плитки 1" },
             { category: "category2", size: "small-square", title: "Плитка 2", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg", description: "Описание плитки 2" },
             { category: "category3", size: "horizontal-rectangle", title: "Плитка 3", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
             { category: "category1", size: "vertical-rectangle", title: "Плитка 4", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
