--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             margin: 0;
             font-family: 'Arial', sans-serif;
             color: #ffffff;
+
         }
 
         .tile-description, .tile-title {
@@ -69,7 +70,7 @@
             background-color: #ff6f61;
         }
 
-        /* Стили для пользовательских подсказок */
+         /* Стили для пользовательских подсказок */
         .tooltip {
             position: absolute;
             background-color: #333;
@@ -82,6 +83,20 @@
             opacity: 0;
             transition: opacity 0.3s;
             pointer-events: none;
+            bottom: 125%; /* Расположено над кнопкой */
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        .tooltip::after {
+            content: "";
+            position: absolute;
+            top: 100%; /* Расположено под подсказкой */
+            left: 50%;
+            margin-left: -5px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: #333 transparent transparent transparent;
         }
 
         .tile-container {
@@ -140,9 +155,6 @@
             display: none;
             pointer-events: none;
         }
-
-
-        }
     </style>
 </head>
 <body>
@@ -171,7 +183,7 @@
             { category: "category3", size: "vertical-rectangle", title: "Плитка 8", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
         ];
 
-        const tileContainer = document.querySelector('.tile-container');
+      const tileContainer = document.querySelector('.tile-container');
 
         tileData.forEach(tile => {
             const tileElement = document.createElement('div');
