--- a/index.html
+++ b/index.html
@@ -181,7 +181,11 @@
             { category: "category3", size: "large-square", title: "Плитка 6", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
             { category: "category2", size: "horizontal-rectangle", title: "Плитка 7", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
             { category: "category3", size: "vertical-rectangle", title: "Плитка 8", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
-        ];
+            { category: "category3", size: "vertical-rectangle", title: "Плитка 8", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
+            { category: "category3", size: "vertical-rectangle", title: "Плитка 8", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
+            { category: "category2", size: "vertical-rectangle", title: "Плитка 8", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
+
+		];
 
       const tileContainer = document.querySelector('.tile-container');
 
