--- a/index.html
+++ b/index.html
@@ -1,255 +1,164 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Плиточная раскладка с фильтрацией</title>
-    <style>
-        body {
-            background-color: #0e0e0e;
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            color: #ffffff;
-
-        }
-
-        .tile-description, .tile-title {
-            position: absolute;
-            left: 0;
-            right: 0;
-            color: #fff;
-            padding: 10px;
-            opacity: 0;
-            transition: opacity 0.3s;
-            text-align: center;
-            font-size: 14px;
-        }
-
-        .tile-description {
-            top: 0;
-            bottom: 0;
-            background: rgba(0,0,0,0.7);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .tile:hover .tile-description, .tile:hover .tile-title {
-            opacity: 1;
-        }
-
-        .logo {
-            text-align: center;
-            font-size: 48px;
-            font-weight: bold;
-            margin: 30px 0 20px 0;
-            color: #ff6f61;
-            text-transform: uppercase;
-            letter-spacing: 5px;
-        }
-
-        .filter-buttons {
-            text-align: center;
-            margin: 20px 0;
-        }
-
-        .filter-buttons button {
-            background-color: #444;
-            color: #fff;
-            border: none;
-            padding: 10px 15px;
-            margin: 5px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-            font-size: 16px;
-            position: relative;
-        }
-
-        .filter-buttons button:hover, .filter-buttons .active {
-            background-color: #ff6f61;
-        }
-
-         /* Стили для пользовательских подсказок */
-        .tooltip {
-            position: absolute;
-            background-color: #333;
-            color: #fff;
-            padding: 5px 10px;
-            border-radius: 5px;
-            font-size: 14px;
-            white-space: nowrap;
-            z-index: 1000;
-            opacity: 0;
-            transition: opacity 0.3s;
-            pointer-events: none;
-            bottom: 125%; /* Расположено над кнопкой */
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        .tooltip::after {
-            content: "";
-            position: absolute;
-            top: 100%; /* Расположено под подсказкой */
-            left: 50%;
-            margin-left: -5px;
-            border-width: 5px;
-            border-style: solid;
-            border-color: #333 transparent transparent transparent;
-        }
-
-        .tile-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-            grid-auto-rows: 100px;
-            gap: 5px;
-            justify-content: center;
-            max-width: 100%;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #0e0e0e;
-            grid-auto-flow: dense;
-        }
-
-        .tile {
-            position: relative;
-            overflow: hidden;
-            border-radius: 10px;
-            transition: transform 0.3s, box-shadow 0.3s;
-            cursor: pointer;
-        }
-
-        .tile img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .tile:hover {
-            transform: scale(1.05);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-        }
-
-        .large-square {
-            grid-column: span 2;
-            grid-row: span 2;
-        }
-
-        .small-square {
-            grid-column: span 1;
-            grid-row: span 1;
-        }
-
-        .horizontal-rectangle {
-            grid-column: span 2;
-            grid-row: span 1;
-        }
-
-        .vertical-rectangle {
-            grid-column: span 1;
-            grid-row: span 2;
-        }
-
-        .tile.hidden {
-            display: none;
-            pointer-events: none;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Интерактивная карта</title>
+  <style>
+    html, body {
+      margin: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+    #map-container {
+      width: 100%;
+      height: 100%;
+      background-color: #000;
+      position: relative;
+      overflow: hidden;
+      touch-action: none;
+      cursor: grab;
+    }
+    #map-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      user-select: none;
+    }
+    .tile {
+      position: absolute;
+      width: 256px;
+      height: 256px;
+    }
+    .marker {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background-color: red;
+      border-radius: 50%;
+      cursor: pointer;
+      z-index: 10;
+    }
+    .tooltip {
+      position: absolute;
+      background: white;
+      border: 1px solid #ccc;
+      padding: 10px;
+      width: 200px;
+      display: none;
+      z-index: 1000;
+    }
+    .tooltip img {
+      width: 100%;
+      height: auto;
+    }
+    @media (max-width: 600px) {
+      .tooltip {
+        width: 150px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="logo">T4</div>
+<div id="map-container">
+  <div id="map-wrapper"></div>
+</div>
 
-    <div class="filter-buttons">
-        <button data-filter="all" class="active" data-tooltip="Показать все эскизы">Все</button>
-        <button data-filter="category1" data-tooltip="ЭСКИЗЫ">ЭСКИЗЫ</button>
-        <button data-filter="category2" data-tooltip="2007">2007 ГОД</button>
-        <button data-filter="category3" data-tooltip="2010">Категория 3</button>
-    </div>
+<script>
+  const container = document.getElementById('map-container');
+  const mapWrapper = document.getElementById('map-wrapper');
+  let scale = 1;
+  let originX = 0;
+  let originY = 0;
+  let isDragging = false;
+  let startX, startY;
 
-    <div class="tile-container">
-        <!-- Плитки будут сгенерированы JavaScript-ом -->
-    </div>
+  // Загрузка плиток (тайлов)
+  const tileSize = 256;
+  const mapWidth = 1000;
+  const mapHeight = 1000;
+  const tilesX = Math.ceil(mapWidth / tileSize);
+  const tilesY = Math.ceil(mapHeight / tileSize);
 
-    <script>
-        const tileData = [
-            { category: "category1", size: "large-square", title: "Плитка 1", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg", description: "Описание плитки 1" },
-            { category: "category2", size: "small-square", title: "Плитка 2", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg", description: "Описание плитки 2" },
-            { category: "category3", size: "horizontal-rectangle", title: "Плитка 3", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
-            { category: "category1", size: "vertical-rectangle", title: "Плитка 4", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
-            { category: "category2", size: "small-square", title: "Плитка 5", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
-            { category: "category3", size: "large-square", title: "Плитка 6", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
-            { category: "category2", size: "horizontal-rectangle", title: "Плитка 7", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
-            { category: "category3", size: "vertical-rectangle", title: "Плитка 8", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
-            { category: "category3", size: "vertical-rectangle", title: "Плитка 8", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
-            { category: "category3", size: "vertical-rectangle", title: "Плитка 8", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
-            { category: "category2", size: "vertical-rectangle", title: "Плитка 8", img: "https://avavatar.ru/images/avatars/44/avatar_ItfsQxuFUpO210Rf.jpg" },
+  for (let y = 0; y < tilesY; y++) {
+    for (let x = 0; x < tilesX; x++) {
+      const tile = document.createElement('img');
+      tile.src = `tiles/tile_${x}_${y}.jpg`; // Подготовь заранее эти файлы
+      tile.className = 'tile';
+      tile.style.left = `${x * tileSize}px`;
+      tile.style.top = `${y * tileSize}px`;
+      mapWrapper.appendChild(tile);
+    }
+  }
 
-		];
+  // Подгрузка точек из JSON
+  fetch('points.json')
+    .then(res => res.json())
+    .then(points => {
+      points.forEach((point, i) => {
+        const marker = document.createElement('div');
+        marker.className = 'marker';
+        marker.style.left = `${point.x}px`;
+        marker.style.top = `${point.y}px`;
+        marker.dataset.tooltip = `tooltip${i}`;
 
-      const tileContainer = document.querySelector('.tile-container');
+        const tooltip = document.createElement('div');
+        tooltip.className = 'tooltip';
+        tooltip.id = `tooltip${i}`;
+        tooltip.style.left = `${point.x + 20}px`;
+        tooltip.style.top = `${point.y + 20}px`;
+        tooltip.innerHTML = `
+          <img src="${point.image}" alt="Точка">
+          <p>${point.text}</p>
+        `;
 
-        tileData.forEach(tile => {
-            const tileElement = document.createElement('div');
-            tileElement.classList.add('tile', tile.size);
-            tileElement.setAttribute('data-category', tile.category);
+        marker.addEventListener('mouseenter', () => tooltip.style.display = 'block');
+        marker.addEventListener('mouseleave', () => tooltip.style.display = 'none');
 
-            const imgElement = document.createElement('img');
-            imgElement.src = tile.img;
-            imgElement.alt = tile.title;
+        mapWrapper.appendChild(marker);
+        mapWrapper.appendChild(tooltip);
+      });
+    });
 
-            const titleElement = document.createElement('div');
-            titleElement.classList.add('tile-title');
-            titleElement.textContent = tile.title;
+  // Масштабирование колесиком
+  container.addEventListener('wheel', (e) => {
+    e.preventDefault();
+    const rect = mapWrapper.getBoundingClientRect();
+    const offsetX = e.clientX - rect.left;
+    const offsetY = e.clientY - rect.top;
 
-            tileElement.appendChild(imgElement);
-            tileElement.appendChild(titleElement);
+    const delta = e.deltaY < 0 ? 1.1 : 0.9;
+    const newScale = scale * delta;
+    if (newScale < 0.5 || newScale > 5) return;
 
-            if (tile.description) {
-                const descriptionElement = document.createElement('div');
-                descriptionElement.classList.add('tile-description');
-                descriptionElement.textContent = tile.description;
-                tileElement.appendChild(descriptionElement);
-            }
+    originX = (originX - offsetX) * delta + offsetX;
+    originY = (originY - offsetY) * delta + offsetY;
 
-            tileContainer.appendChild(tileElement);
-        });
+    scale = newScale;
+    updateTransform();
+  });
 
-        const filterButtons = document.querySelectorAll('.filter-buttons button');
-        const tiles = document.querySelectorAll('.tile');
+  // Перемещение мышкой
+  container.addEventListener('mousedown', (e) => {
+    isDragging = true;
+    startX = e.clientX - originX;
+    startY = e.clientY - originY;
+    container.style.cursor = 'grabbing';
+  });
+  container.addEventListener('mousemove', (e) => {
+    if (!isDragging) return;
+    originX = e.clientX - startX;
+    originY = e.clientY - startY;
+    updateTransform();
+  });
+  container.addEventListener('mouseup', () => {
+    isDragging = false;
+    container.style.cursor = 'grab';
+  });
 
-        filterButtons.forEach(button => {
-            button.addEventListener('click', event => {
-                const filter = button.getAttribute('data-filter');
-                filterTiles(filter);
-                filterButtons.forEach(btn => btn.classList.remove('active'));
-                event.target.classList.add('active');
-            });
-
-            // Создание пользовательской подсказки
-            const tooltip = document.createElement('div');
-            tooltip.className = 'tooltip';
-            tooltip.textContent = button.getAttribute('data-tooltip');
-            button.appendChild(tooltip);
-
-            button.addEventListener('mouseenter', () => {
-                tooltip.style.opacity = '1';
-            });
-
-            button.addEventListener('mouseleave', () => {
-                tooltip.style.opacity = '0';
-            });
-        });
-
-        function filterTiles(filter) {
-            tiles.forEach(tile => {
-                if (filter === 'all' || tile.getAttribute('data-category') === filter) {
-                    tile.classList.remove('hidden');
-                } else {
-                    tile.classList.add('hidden');
-                }
-            });
-        }
-    </script>
+  function updateTransform() {
+    mapWrapper.style.transform = `translate(${originX}px, ${originY}px) scale(${scale})`;
+  }
+</script>
 </body>
 </html>
