--- a/index.html
+++ b/index.html
@@ -50,18 +50,15 @@
       background: white;
       border: 1px solid #ccc;
       padding: 10px;
-      max-width: 90vw;
+      max-width: 50vw;
+      max-height: 50vh;
+      overflow: auto;
       display: none;
       z-index: 1000;
     }
     .tooltip img {
       width: 100%;
       height: auto;
-    }
-    @media (max-width: 600px) {
-      .tooltip {
-        max-width: 90vw;
-      }
     }
   </style>
 </head>
@@ -78,6 +75,7 @@
   let originY = 0;
   let isDragging = false;
   let startX, startY;
+  let activeTooltip = null;
 
   const tileSize = 256;
   const mapWidth = 1000;
@@ -122,25 +120,49 @@
           <p>${point.text}</p>
         `;
 
-        marker.addEventListener('mouseenter', (e) => {
-          tooltip.style.display = 'block';
-          tooltip.style.left = `${e.clientX + 10}px`;
-          tooltip.style.top = `${e.clientY + 10}px`;
-        });
+        marker.addEventListener('click', (e) => {
+          e.stopPropagation();
+          if (activeTooltip && activeTooltip !== tooltip) {
+            activeTooltip.style.display = 'none';
+          }
 
-        marker.addEventListener('mousemove', (e) => {
-          tooltip.style.left = `${e.clientX + 10}px`;
-          tooltip.style.top = `${e.clientY + 10}px`;
-        });
+          if (tooltip.style.display === 'block') {
+            tooltip.style.display = 'none';
+            activeTooltip = null;
+          } else {
+            tooltip.style.display = 'block';
+            activeTooltip = tooltip;
 
-        marker.addEventListener('mouseleave', () => {
-          tooltip.style.display = 'none';
+            // Позиционирование по экрану с учётом границ
+            const markerRect = marker.getBoundingClientRect();
+            const tooltipWidth = tooltip.offsetWidth;
+            const tooltipHeight = tooltip.offsetHeight;
+            let left = markerRect.left + 60;
+            let top = markerRect.top + 20;
+
+            if (left + tooltipWidth > window.innerWidth) {
+              left = window.innerWidth - tooltipWidth - 10;
+            }
+            if (top + tooltipHeight > window.innerHeight) {
+              top = window.innerHeight - tooltipHeight - 10;
+            }
+
+            tooltip.style.left = `${left}px`;
+            tooltip.style.top = `${top}px`;
+          }
         });
 
         mapWrapper.appendChild(marker);
         document.body.appendChild(tooltip);
       });
     });
+
+  document.body.addEventListener('click', () => {
+    if (activeTooltip) {
+      activeTooltip.style.display = 'none';
+      activeTooltip = null;
+    }
+  });
 
   container.addEventListener('wheel', (e) => {
     e.preventDefault();
