--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
   let startX, startY;
   let activeTooltip = null;
 
+  let pinchStartDistance = null;
+  let lastTouchCenter = null;
+
   const tileSize = 256;
   const mapWidth = 1000;
   const mapHeight = 1000;
@@ -133,7 +136,6 @@
             tooltip.style.display = 'block';
             activeTooltip = tooltip;
 
-            // Позиционирование по экрану с учётом границ
             const markerRect = marker.getBoundingClientRect();
             const tooltipWidth = tooltip.offsetWidth;
             const tooltipHeight = tooltip.offsetHeight;
@@ -180,6 +182,42 @@
     scale = newScale;
     updateTransform();
   }, { passive: false });
+
+  container.addEventListener('pointerdown', (e) => {
+    container.setPointerCapture(e.pointerId);
+  });
+
+  container.addEventListener('pointermove', (e) => {
+    if (e.pointerType === 'touch') {
+      const touches = [...e.targetTouches || []];
+      if (touches.length === 2) {
+        const dx = touches[0].clientX - touches[1].clientX;
+        const dy = touches[0].clientY - touches[1].clientY;
+        const distance = Math.sqrt(dx * dx + dy * dy);
+
+        const centerX = (touches[0].clientX + touches[1].clientX) / 2;
+        const centerY = (touches[0].clientY + touches[1].clientY) / 2;
+
+        if (pinchStartDistance !== null) {
+          const scaleDelta = distance / pinchStartDistance;
+          const newScale = scale * scaleDelta;
+          if (newScale >= 0.5 && newScale <= 5) {
+            originX -= (centerX - originX) * (scaleDelta - 1);
+            originY -= (centerY - originY) * (scaleDelta - 1);
+            scale = newScale;
+            updateTransform();
+          }
+        }
+        pinchStartDistance = distance;
+        lastTouchCenter = { x: centerX, y: centerY };
+      }
+    }
+  });
+
+  container.addEventListener('pointerup', () => {
+    pinchStartDistance = null;
+    lastTouchCenter = null;
+  });
 
   container.addEventListener('mousedown', (e) => {
     e.preventDefault();
