--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       background-color: #fff;
       position: relative;
       overflow: hidden;
-      touch-action: none;
+      touch-action: pan-x pan-y;
       cursor: grab;
       user-select: none;
     }
@@ -76,9 +76,8 @@
   let isDragging = false;
   let startX, startY;
   let activeTooltip = null;
-
-  let pinchStartDistance = null;
-  let lastTouchCenter = null;
+  let initialPinchDistance = null;
+  let initialScale = 1;
 
   const tileSize = 256;
   const mapWidth = 1000;
@@ -183,40 +182,41 @@
     updateTransform();
   }, { passive: false });
 
-  container.addEventListener('pointerdown', (e) => {
-    container.setPointerCapture(e.pointerId);
-  });
-
-  container.addEventListener('pointermove', (e) => {
-    if (e.pointerType === 'touch') {
-      const touches = [...e.targetTouches || []];
-      if (touches.length === 2) {
-        const dx = touches[0].clientX - touches[1].clientX;
-        const dy = touches[0].clientY - touches[1].clientY;
-        const distance = Math.sqrt(dx * dx + dy * dy);
-
-        const centerX = (touches[0].clientX + touches[1].clientX) / 2;
-        const centerY = (touches[0].clientY + touches[1].clientY) / 2;
-
-        if (pinchStartDistance !== null) {
-          const scaleDelta = distance / pinchStartDistance;
-          const newScale = scale * scaleDelta;
-          if (newScale >= 0.5 && newScale <= 5) {
-            originX -= (centerX - originX) * (scaleDelta - 1);
-            originY -= (centerY - originY) * (scaleDelta - 1);
-            scale = newScale;
-            updateTransform();
-          }
-        }
-        pinchStartDistance = distance;
-        lastTouchCenter = { x: centerX, y: centerY };
-      }
+  container.addEventListener('touchstart', (e) => {
+    if (e.touches.length === 2) {
+      initialPinchDistance = getDistance(e.touches[0], e.touches[1]);
+      initialScale = scale;
+    } else if (e.touches.length === 1) {
+      isDragging = true;
+      startX = e.touches[0].clientX - originX;
+      startY = e.touches[0].clientY - originY;
     }
   });
 
-  container.addEventListener('pointerup', () => {
-    pinchStartDistance = null;
-    lastTouchCenter = null;
+  container.addEventListener('touchmove', (e) => {
+    if (e.touches.length === 2 && initialPinchDistance !== null) {
+      const currentDistance = getDistance(e.touches[0], e.touches[1]);
+      const scaleFactor = currentDistance / initialPinchDistance;
+      const newScale = initialScale * scaleFactor;
+
+      if (newScale >= 0.5 && newScale <= 5) {
+        const centerX = (e.touches[0].clientX + e.touches[1].clientX) / 2;
+        const centerY = (e.touches[0].clientY + e.touches[1].clientY) / 2;
+        originX -= (centerX - originX) * (scaleFactor - 1);
+        originY -= (centerY - originY) * (scaleFactor - 1);
+        scale = newScale;
+        updateTransform();
+      }
+    } else if (e.touches.length === 1 && isDragging) {
+      originX = e.touches[0].clientX - startX;
+      originY = e.touches[0].clientY - startY;
+      updateTransform();
+    }
+  });
+
+  container.addEventListener('touchend', () => {
+    initialPinchDistance = null;
+    isDragging = false;
   });
 
   container.addEventListener('mousedown', (e) => {
@@ -238,6 +238,12 @@
     isDragging = false;
     container.style.cursor = 'grab';
   });
+
+  function getDistance(touch1, touch2) {
+    const dx = touch2.clientX - touch1.clientX;
+    const dy = touch2.clientY - touch1.clientY;
+    return Math.sqrt(dx * dx + dy * dy);
+  }
 
   function updateTransform() {
     mapWrapper.style.transform = `translate(${originX}px, ${originY}px) scale(${scale})`;
