--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
   let initialPinchDistance = null;
   let initialScale = 1;
   let pinchCenter = null;
+  let pinchScreen = null;
 
   const tileSize = 256;
   const mapWidth = 1000;
@@ -206,9 +207,13 @@
       initialPinchDistance = getDistance(e.touches[0], e.touches[1]);
       initialScale = scale;
       const rect = container.getBoundingClientRect();
-      const cx = (e.touches[0].clientX + e.touches[1].clientX) / 2 - rect.left;
-      const cy = (e.touches[0].clientY + e.touches[1].clientY) / 2 - rect.top;
-      pinchCenter = { x: cx, y: cy };
+      const screenX = (e.touches[0].clientX + e.touches[1].clientX) / 2 - rect.left;
+      const screenY = (e.touches[0].clientY + e.touches[1].clientY) / 2 - rect.top;
+      pinchScreen = { x: screenX, y: screenY };
+      pinchCenter = {
+        x: (screenX - originX) / scale,
+        y: (screenY - originY) / scale
+      };
     } else if (e.touches.length === 1) {
       isDragging = true;
       startX = e.touches[0].clientX - originX;
@@ -217,14 +222,14 @@
   });
 
   container.addEventListener('touchmove', (e) => {
-    if (e.touches.length === 2 && initialPinchDistance !== null && pinchCenter) {
+    if (e.touches.length === 2 && initialPinchDistance !== null && pinchCenter && pinchScreen) {
       const currentDistance = getDistance(e.touches[0], e.touches[1]);
       const scaleFactor = currentDistance / initialPinchDistance;
       const newScale = initialScale * scaleFactor;
       if (newScale >= 0.5 && newScale <= 5) {
-        originX -= (pinchCenter.x - originX) * (scaleFactor - 1);
-        originY -= (pinchCenter.y - originY) * (scaleFactor - 1);
         scale = newScale;
+        originX = pinchScreen.x - pinchCenter.x * scale;
+        originY = pinchScreen.y - pinchCenter.y * scale;
         updateTransform();
       }
     } else if (e.touches.length === 1 && isDragging) {
@@ -237,6 +242,7 @@
   container.addEventListener('touchend', () => {
     initialPinchDistance = null;
     pinchCenter = null;
+    pinchScreen = null;
     isDragging = false;
   });
 
